test/corpus/list.txt
==================
empty list
==================
⟨⟩
---

(source_file
  (STMT
    (EXPR (subExpr (arg (subject (atom (array))))))
  )
)

==================
strand
==================
1‿2
1‿2‿3
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (ANY (atom (symbol_sl (number))))
            (ANY (atom (symbol_sl (number))))
          )
        )
      )
    )
  )
  (STMT_delimiter)
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (ANY (atom (symbol_sl (number))))
            (ANY (atom (symbol_sl (number))))
            (ANY (atom (symbol_sl (number))))
          )
        )
      )
    )
  )
)

==================
list literal
==================
⟨1,2⟩
# ⟨1,2,3⟩
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom
              (array
                (EXPR (subExpr (arg (subject (atom (symbol_sl (number)))))))
                (STMT_delimiter)
                (EXPR (subExpr (arg (subject (atom (symbol_sl (number)))))))
              )
            )
          )
        )
      )
    )
  )
  (STMT_delimiter)
  (comment)
) 
