test/corpus/numeric_literal.txt
==================
integer literal: 1, ¯1
==================
1
¯1
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
  (sep)
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
)
==================
float literal: 1.8, ¯3.01
==================
1.8
¯3.01
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
  (sep)
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
)
==================
infinity and constant: ∞, ¯π
==================
∞
¯π
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
  (sep)
  (STMT
    (EXPR
      (subExpr
        (arg
          (subject
            (atom (symbol_sl (number)))
          )
        )
      )
    )
  )
)
